deployment/k8s/env/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  labels:
    app: frontend
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
spec:
  ingressClassName: nginx
  rules:
    - host: dev.oliverrr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: frontend
  tls:
    - hosts:
        - dev.oliverrr.net
      secretName: oliverrr-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms
  labels:
    app: backend
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
spec:
  ingressClassName: nginx
  rules:
    - host: cms-dev.oliverrr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: backend
  tls:
    - hosts:
        - cms-dev.oliverrr.net
      secretName: oliverrr-tls
